コマンド関連おおよそ完成

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,9 @@
 name: Man10DrugPlugin
 version: ${project.version}
 main: red.man10.man10drugplugin.Man10DrugPlugin
+authors: [forest611]
+commands:
+  mdp:
+    description: Man10DrugPlugin
+    usage: /<command>
+    default: op
